Adds CSS style to force column width in detail pane

--- a/pig/src/main/resources/web/css/ambrose.css
+++ b/pig/src/main/resources/web/css/ambrose.css
@@ -12,14 +12,18 @@ path.chord {
 #job-props {
 }
 
+#job-n-of-n {
+  width: 80%;
+}
+
 #job-summary {
-    width: 100%;
+  width: 100%;
 }
 
 .row-job-mappers {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 .row-job-reducers {
-    white-space: nowrap;
+  white-space: nowrap;
 }
