Add Dag rendering.
 - Scale and pan first rendered DAG to fit the screen.
 - Change nodes color when Jobs start, finish or die.
 - Change edges colors for each job state.
 - Hide details panel on dag rendering.
 - Put Dag in second tab.
 - Add tooltip when hovering nodes showing details for the job.

--- a/pig/src/main/resources/web/css/ambrose.css
+++ b/pig/src/main/resources/web/css/ambrose.css
@@ -23,3 +23,104 @@ path.chord {
 .row-job-reducers {
     white-space: nowrap;
 }
+
+.node {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.7em;
+  background: white;
+  text-align: center;
+  cursor: default;
+
+  transition: 700ms background, box-shadow;
+  -webkit-transition: 700ms background, -webkit-box-shadow;
+  -ms-transition: 700ms background, -ms-box-shadow;
+  -o-transition: 700ms background, -o-box-shadow;
+  -moz-transition: 700ms background, -moz-box-shadow;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
+.node.jobSelected {
+  background: yellow;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  -o-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  -ms-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+}
+
+.node.JOB_STARTED {
+  background: yellow;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  -o-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  -ms-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+}
+
+.node.JOB_PROGRESS {
+  background: blue;
+}
+
+.node.JOB_FINISHED {
+  background: #aaa;
+  box-shadow: 0 0 0px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0 0 0px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0 0 0px rgba(0, 0, 0, 0.6);
+  -o-box-shadow: 0 0 0px rgba(0, 0, 0, 0.6);
+  -ms-box-shadow: 0 0 0px rgba(0, 0, 0, 0.6);
+}
+
+.node.JOB_FAILED {
+  background: red;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  -o-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  -ms-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+}
+
+div > canvas {
+  cursor: move;
+}
+
+.tip {
+	 text-align: left;
+	 width:auto;
+}
+
+.tip-title {
+  font-size: 11px;
+  text-align:center;
+  margin-bottom:2px;
+}
+
+.tip {
+  color: #111;
+  max-width: 400px;
+  background-color: white;
+  border:1px solid #ccc;
+  -moz-box-shadow:#555 2px 2px 8px;
+  -webkit-box-shadow:#555 2px 2px 8px;
+  -o-box-shadow:#555 2px 2px 8px;
+  box-shadow:#555 2px 2px 8px;
+  opacity:0.9;
+  filter:alpha(opacity=90);
+  font-size:10px;
+  font-family:Verdana, Geneva, Arial, Helvetica, sans-serif;
+  padding:7px;
+}
+
+.tip ul {
+  margin: 0;
+  padding: 0;
+  margin-left: 3px;
+}
+
+.tip ul li {
+  list-style-type: none;
+}
