--- a/pig/src/main/resources/web/css/ambrose.css
+++ b/pig/src/main/resources/web/css/ambrose.css
@@ -29,7 +29,7 @@ path.chord {
   border-radius: 0.7em;
   background: white;
   text-align: center;
-  cursor: default;
+  cursor: pointer;
 
   transition: 700ms background, box-shadow;
   -webkit-transition: 700ms background, -webkit-box-shadow;
@@ -101,14 +101,22 @@ div > canvas {
 }
 
 .tip {
+  position: relative;
   color: #111;
   max-width: 400px;
   background-color: white;
   border:1px solid #ccc;
-  -moz-box-shadow:#555 2px 2px 8px;
-  -webkit-box-shadow:#555 2px 2px 8px;
-  -o-box-shadow:#555 2px 2px 8px;
-  box-shadow:#555 2px 2px 8px;
+  -moz-box-shadow:#999 2px 2px 8px;
+  -webkit-box-shadow:#999 2px 2px 8px;
+  -o-box-shadow:#999 2px 2px 8px;
+  box-shadow:#999 2px 2px 8px;
+
+  transition: 500ms box-shadow,opacity;
+  -webkit-transition: 500ms -webkit-box-shadow,opacity;
+  -moz-transition: 500ms -moz-box-shadow,opacity;
+  -o-transition: 500ms -o-box-shadow,opacity;
+  -ms-transition: 500ms -ms-box-shadow,opacity;
+
   opacity:0.9;
   filter:alpha(opacity=90);
   font-size:10px;
@@ -124,4 +132,35 @@ div > canvas {
 
 .tip ul li {
   list-style-type: none;
+}
+
+.tip.pinned .closetip {
+  visibility: visible;
+}
+
+.tip.pinned {
+  -moz-box-shadow:#0062A3 2px 2px 12px;
+  -webkit-box-shadow:#0062A3 2px 2px 12px;
+  -o-box-shadow:#0062A3 2px 2px 12px;
+  box-shadow:#0062A3 2px 2px 12px;
+  opacity: 0.98;
+}
+
+.tip .closetip {
+  font-family: Sans-serif;
+  visibility: hidden;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: black;
+  background-color: #D7E2E4;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 1px 7px;
+  border-top-right-radius: 0.5em;
+  cursor: pointer;
+}
+
+.tip .closetip:hover {
+  background-color: #BAC5C7;
 }
