* Fix some issues with pinning the tooltip  * Add map and reduce progress  * Update the tooltip live when these change.

--- a/pig/src/main/resources/web/css/ambrose.css
+++ b/pig/src/main/resources/web/css/ambrose.css
@@ -62,9 +62,11 @@ path.chord {
   -ms-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
 }
 
+/*
 .node.JOB_PROGRESS {
-  background: blue;
+  background: green;
 }
+*/
 
 .node.JOB_FINISHED {
   background: #aaa;
