--- a/common/src/main/resources/web/css/ambrose.css
+++ b/common/src/main/resources/web/css/ambrose.css
@@ -1,14 +1,8 @@
 /* Page dimensions */
 body { padding-top: 60px; padding-bottom: 40px; }
 #diagrams > div { height: 350px; margin: 0; }
-#ambrose-views-chord { width: 20%; }
-#ambrose-views-graph { width: 80%; }
-
-@media all and (max-width: 1024px) {
-  #diagrams > div { height: 250px; margin: 0; }
-  #ambrose-views-chord { display: none; }
-  #ambrose-views-graph { width: 100%; }
-}
+#ambrose-views-chord {}
+#ambrose-views-graph {}
 
 /* Table view */
 .ambrose-views-table td.job-mappers, .ambrose-views-table td.job-reducers { white-space: nowrap; }
