Fixes based on the review.

--- a/common/src/main/resources/web/css/ambrose.css
+++ b/common/src/main/resources/web/css/ambrose.css
@@ -21,6 +21,7 @@ h2 { margin: 1em 0px; }
 /* Table view */
 .ambrose-view-table td.job-mappers,
 .ambrose-view-table td.job-reducers { white-space: nowrap; }
+.ambrose-view-table td.job-time { white-space: nowrap; }
 .ambrose-view-table a,
 .ambrose-view-table a:link,
 .ambrose-view-table a:visited,
