Edited the body of the popover and refactored some methods.

--- a/common/src/main/resources/web/css/ambrose.css
+++ b/common/src/main/resources/web/css/ambrose.css
@@ -43,3 +43,6 @@ h2 { margin: 1em 0px; }
 .dashboard-status { margin: 1em 0; }
 
 .popoverKey { font-weight:bold; }
+
+.popover-content  { padding-top: 10px; padding-left: 3px; margin: 0px; border: 0px; }
+#popoverBody ul { list-style: square; }
