--- a/common/src/main/resources/web/css/ambrose.css
+++ b/common/src/main/resources/web/css/ambrose.css
@@ -44,5 +44,5 @@ h2 { margin: 1em 0px; }
 
 .popoverKey { font-weight:bold; }
 
-.popover-content  { padding-top: 10px; padding-left: 3px; margin: 0px; border: 0px; }
-#popoverBody ul { list-style: square; }
+.popover-content  { padding-top: 10px; padding-left: 0px; margin: 0px; border: 0px; }
+#popoverBody li { list-style: none; margin-left: -10px; margin-bottom: 5px;}
