--- a/common/src/main/resources/web/css/ambrose.css
+++ b/common/src/main/resources/web/css/ambrose.css
@@ -45,5 +45,5 @@ h2 { margin: 1em 0px; }
 .popoverKey { font-weight:bold; }
 .popoverTitle { font-weight:bold; }
 
-.popover .popover-content { padding: 0px; padding-right : 5px; margin: 0px; border: 0px; }
+.popover .popover-content { padding: 0px; padding-top : 5px; padding-right : 12px; margin: 0px; border: 0px; }
 #popoverBody li { list-style: none; margin-left: -10px; margin-top: 5px;}
