--- a/common/src/main/resources/web/css/ambrose.css
+++ b/common/src/main/resources/web/css/ambrose.css
@@ -47,3 +47,21 @@ h2 { margin: 1em 0px; }
 
 .popover .popover-content { padding: 0px; padding-top : 5px; padding-right : 12px; margin: 0px; border: 0px; }
 #popoverBody li { list-style: none; margin-left: -10px; margin-top: 5px;}
+
+#testdiv {
+  width: 400px;
+  position: absolute;
+  z-index: 1;
+  background-color: #66CCFF;
+  left: 30px;
+  top: 50px;
+  font-family: Tahoma, Geneva, sans-serif;
+  font-size: 14px;
+  text-align: center;
+  font-weight: bold;
+  color: #FFF;
+  padding: 20px;
+  cursor: default;
+}
+
+#testdiv a { color: #FFD; }
