--- a/common/src/main/resources/web/css/ambrose.css
+++ b/common/src/main/resources/web/css/ambrose.css
@@ -42,8 +42,9 @@ h2 { margin: 1em 0px; }
 /* Dashboard */
 .dashboard-status { margin: 1em 0; }
 
+.popoverSectionKey { font-weight:bold; }
 .popoverKey { font-weight:bold; }
-.popoverTitle { font-weight:bold; }
+.popoverTitle { font-weight:bold; font-size: 120%;}
 
 .popover .popover-content { padding: 0px; padding-top : 5px; padding-right : 12px; margin: 0px; border: 0px; }
 #popoverBody li { list-style: none; margin-left: -10px; margin-top: 5px;}
