--- a/common/src/main/resources/web/css/ambrose.css
+++ b/common/src/main/resources/web/css/ambrose.css
@@ -47,4 +47,6 @@ h2 { margin: 1em 0px; }
 .popoverTitle { font-weight:bold; font-size: 120%;}
 
 .popover .popover-content { padding: 0px; padding-top : 5px; padding-right : 12px; margin: 0px; border: 0px; }
+.dropdown-header { padding-top:5px; padding-bottom:5px; padding-left : 20px; font-size:11pt; font-weight:bold; }
+
 #popoverBody li { list-style: none; margin-left: -10px; margin-top: 5px;}
