More refactor, decode pig.script at client side instead.

--- a/common/src/main/resources/web/css/ambrose.css
+++ b/common/src/main/resources/web/css/ambrose.css
@@ -38,17 +38,7 @@ h2 { margin: 1em 0px; }
 .ambrose-view-graph path.reduce { fill: #FF7800; }
 .ambrose-view-graph circle.magnitude { fill: rgba(28, 231, 231, 0.25); }
 .ambrose-view-graph circle.tic { fill: none; stroke: rgba(28, 231, 231, 0.25); stroke-width: 1px; }
-
-/* Dashboard */
-.dashboard-status { margin: 1em 0; }
-
-.popoverKey { font-weight:bold; }
-.popoverTitle { font-weight:bold; }
-
-.popover .popover-content { padding: 0px; padding-top : 5px; padding-right : 12px; margin: 0px; border: 0px; }
-#popoverBody li { list-style: none; margin-left: -10px; margin-top: 5px;}
-
-.scriptDiv {
+.ambrose-view-script {
   height: 300px;
   width: 500px;
   position:fixed !important;
@@ -59,13 +49,22 @@ h2 { margin: 1em 0px; }
   font-family: monospace;
 }
 
-.scriptContent { height:100%; width:100%; }
-.scriptDivTitle { font-weight:bold; padding-right: 70px; cursor: move; }
-.scriptDivTitle .scriptTitleCloseBtn { margin-right: -60px; margin-top: -22px; }
-.scriptDivTitle .scriptTitleRefreshBtn { margin-right: -40px; margin-top: -22px; }
-.scriptDivBody { width:100%;  height:calc(100% - 40px); overflow: auto; }
-.scriptPopoverName { width: 100%; overflow:hidden; display: block; white-space: nowrap; text-overflow: ellipsis;}
-.lineNumber {
+/* Dashboard */
+.dashboard-status { margin: 1em 0; }
+
+.popoverKey { font-weight:bold; }
+.popoverTitle { font-weight:bold; }
+
+.popover .popover-content { padding: 0px; padding-top : 5px; padding-right : 12px; margin: 0px; border: 0px; }
+#popoverBody li { list-style: none; margin-left: -10px; margin-top: 5px;}
+
+.ambrose-view-script .scriptContent { height:100%; width:100%; }
+.ambrose-view-script .scriptDivTitle { font-weight:bold; padding-right: 70px; cursor: move; }
+.ambrose-view-script .scriptDivTitle .scriptName { width: 100%; overflow:hidden; display: block; white-space: nowrap; text-overflow: ellipsis;}
+.ambrose-view-script .scriptDivTitle .scriptTitleCloseBtn { margin-right: -60px; margin-top: -22px; }
+.ambrose-view-script .scriptDivTitle .scriptTitleRefreshBtn { margin-right: -40px; margin-top: -22px; }
+.ambrose-view-script .scriptDivBody { width:100%;  height:calc(100% - 40px); overflow: auto; }
+.ambrose-view-script .lineNumber {
   display: inline-block;
   font-weight: bold;
   text-align: left;
@@ -73,11 +72,11 @@ h2 { margin: 1em 0px; }
   width: 30px;
 }
 
-.scriptLine.hovered, .scriptLine.hovered.selected { background-color: #FFFF80; }
-.scriptLine.selected { background-color: #FFD880; }
-.lineNumber.selected { background-color: #AAAAAA; }
-
-.aliasM, .aliasC, .aliasR { vertical-align: super; top: -0.5em; font-size: 80%; font-weight:bold; }
-.aliasR { padding-right:5px; }
+.ambrose-view-script .scriptDivBody .scriptLine.hovered { background-color: #FFFF80; }
+.ambrose-view-script .scriptDivBody .scriptLine.hovered.selected { background-color: #FFFF80; }
+.ambrose-view-script .scriptDivBody .scriptLine.selected { background-color: #FFD880; }
+.ambrose-view-script .scriptDivBody .lineNumber.selected { background-color: #AAAAAA; }
+.ambrose-view-script .scriptDivBody .aliasM, .aliasC, .aliasR { vertical-align: super; top: -0.5em; font-size: 80%; font-weight:bold; }
+.ambrose-view-script .scriptDivBody .aliasR { padding-right:5px; }
 
 .hidden { opacity : 0; }
