--- a/common/src/main/resources/web/css/ambrose.css
+++ b/common/src/main/resources/web/css/ambrose.css
@@ -36,20 +36,23 @@ h2 { margin: 1em 0px; }
 .ambrose-view-graph path.progress {}
 .ambrose-view-graph path.map { fill: #0e90d2; }
 .ambrose-view-graph path.reduce { fill: #FF7800; }
-.ambrose-view-graph circle.magnitude { fill: rgba(28, 231, 231, 0.25); }
-.ambrose-view-graph circle.tic { fill: none; stroke: rgba(28, 231, 231, 0.25); stroke-width: 1px; }
+.ambrose-view-graph circle.magnitude { fill: rgba(28, 231, 231, 0.25); pointer-events: none; }
+.ambrose-view-graph circle.tic { fill: none; stroke: rgba(28, 231, 231, 0.25); stroke-width: 1px; pointer-events: none; }
 
 /* Dashboard */
 .dashboard-status { margin: 1em 0; }
 
 .popoverSectionKey { font-weight:bold; }
 .popoverKey { font-weight:bold; }
-.popoverTitle { font-weight:bold; font-size: 120%;}
+.popoverTitle { font-weight:bold; font-size: 100%;}
 
 .popover .popover-content { padding: 0px; padding-top : 5px; padding-right : 12px; margin: 0px; border: 0px; }
 .dropdown-header { padding-top:5px; padding-bottom:5px; padding-left : 20px; font-size:11pt; font-weight:bold; }
+.popoverBody li { list-style: none; margin-left: -10px; margin-top: 5px;}
 
-#popoverBody li { list-style: none; margin-left: -10px; margin-top: 5px;}
+.popoverBody .counterList { list-style: none; margin-left: -15px; margin-bottom: 5px; }
+.popoverBody .counterList li.counterListTitle { margin-left: 0px; font-weight:bold; margin-top: 0px; }
+.popoverBody .counterList li { list-style: none; margin-left: 10px; margin-top: 0px; }
+
+.edgeScaleOption .icon-ok { padding-right: 5px; }
 .greyText { color: #cccccc !important; }
-.icon-ok { padding-right: 5px; }
-
